--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -325,6 +325,8 @@
     </a>
 </div>
 
+<ckeditor [editor]="Editor" data="<p>Hello, world 3!</p>"></ckeditor>
+
 <div class="content" role="main">
 
   <!-- Highlight Card -->
